--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -13,7 +13,24 @@
             max-height: 8rem;
         }
 
-        button {
+        .quantity {
+            display: flex;
+            justify-content: center;
+            font-size: 2rem;
+
+            .icon {
+                cursor: pointer;
+                background-color: transparent;
+                color: var(--primary-color);
+                border: none;
+            }
+
+            p {
+                margin: 0 .5rem;
+            }
+        }
+
+        .delete-icon {
             cursor: pointer;
             background-color: transparent;
             border: none;
