--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -2,9 +2,9 @@
     position: relative;
     background-color: #fff;
     padding: 2rem;
-    border-radius: 1.5rem;
+    border-radius: .1rem;
     box-shadow: 2rem 2rem 2rem 0 rgba(#000, 0.03);
-    max-width: 34rem;
+    max-width: 32rem;
     width: 100%;
 
     .admin-icons {
@@ -22,10 +22,10 @@
 
     .product-image {
         width: 100%;
-        height: 20rem;
+        height: 18rem;
         position: relative;
         margin-bottom: 5rem;
-        border-radius: 1.5rem;
+        border-radius: .1em;
         border: 1px solid rgb(230, 230, 230);
         padding: 1rem;
 
