--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,7 +7,7 @@
     align-items: center;
     flex-direction: column;
     margin: 2rem;
-    border-radius: 1.5rem;
+    border-radius: .1rem;
     text-align: center;
     color: var(--primary-color);
     box-shadow: 2rem 2rem 2rem 0 rgba(#000, 0.03);
