--- a/src/pages/single-product/single-product.styles.scss
+++ b/src/pages/single-product/single-product.styles.scss
@@ -18,7 +18,7 @@
         margin: 5rem 3rem;
         padding: 4rem 2rem;
         background-color: #fff;
-        border-radius: 2rem;
+        border-radius: .1rem;
         box-shadow: 2rem 2rem 2rem 0 rgba(#000, 0.03);
 
 
