--- a/src/components/checkout-cart/checkout-cart.styles.scss
+++ b/src/components/checkout-cart/checkout-cart.styles.scss
@@ -1,42 +1,16 @@
 .checkout-cart {
-    margin: 5rem 0 7rem;
-    border-radius: 1.5rem;
+    // width: 100%;
+    margin: 5rem 3rem 7rem;
+    border-radius: .1rem;
     background-color: #fff;
     box-shadow: 2rem 2rem 2rem 0 rgba(#000, 0.03);
 
     @media all and (max-width: 800px) {
-        max-width: 135rem;
-        width: 100%;
-        overflow-x: scroll;
+        margin: 5rem 2rem 7rem;
 
-        &::-webkit-scrollbar {
-            width: 10px;
-            cursor: pointer;
-            margin: 5rem;
-        }
+        @media all and (max-width: 500px) {
+            margin: 5rem 1rem 7rem;
 
-        /* Track */
-        &::-webkit-scrollbar-track {
-            cursor: pointer;
-            // background: var(--container-bg-color);
-            background: #fff;
-            border-radius: 15px;
-            margin: 0 3rem;
-        }
-
-        /* Handle */
-        &::-webkit-scrollbar-thumb {
-            cursor: pointer;
-
-            background: var(--primary-color);
-            border-radius: 15px;
-        }
-
-        /* Handle on hover */
-        &::-webkit-scrollbar-thumb:hover {
-            cursor: pointer;
-
-            background: lighten(#234579, 25);
         }
     }
 
@@ -44,19 +18,21 @@
 }
 
 .checkout-table-header {
-    display: flex;
     width: 100%;
-    // margin: 0 auto;
+    display: grid;
+    align-items: center;
+    grid-template-columns: 20% 40% 20% 15% 5%;
+    // padding: 0 2rem;
 
     @media all and (max-width: 800px) {
-        min-width: 75rem;
-
+        display: none;
+        visibility: hidden;
     }
 }
 
 .header-block {
     font-weight: lighter;
-    width: 20%;
+    width: 100%;
     padding: 2rem;
     text-align: center;
 
