--- a/src/components/checkout-address/checkout-address.styles.scss
+++ b/src/components/checkout-address/checkout-address.styles.scss
@@ -1,12 +1,18 @@
 .address {
     margin: 5rem 3rem;
     max-width: 60rem;
+    background-color: #fff;
+    padding: 4rem 2rem;
+    border-radius: .1rem;
+    box-shadow: 2rem 2rem 2rem 0 rgba(#000, 0.03);
+
 
     @media all and (max-width: 800px) {
         margin: 5rem 2rem;
 
         @media all and (max-width: 500px) {
-            margin: 5rem 1rem;
+            margin: 5rem 0;
+            padding: 4rem 1rem;
         }
     }
 
@@ -15,8 +21,11 @@
         grid-template-columns: 1fr 1fr;
 
 
+
+
         .group {
             input {
+                background-color: var(--body-bg);
                 margin: 0;
             }
 
@@ -31,6 +40,7 @@
 
     .group {
         input {
+            background-color: var(--body-bg);
             margin: 0;
         }
 
