add shipping fee, disable unused radioboxes, adjust address inputs"

--- a/src/components/checkout-cart/checkout-cart.styles.scss
+++ b/src/components/checkout-cart/checkout-cart.styles.scss
@@ -41,6 +41,16 @@
     }
 }
 
+.price-total {
+    padding: 2rem;
+    font-size: 3rem;
+    text-align: end;
+
+    span {
+        font-weight: bolder;
+    }
+}
+
 .empty-message {
     padding: 5rem 0;
     text-align: center;
