--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -32,7 +32,7 @@
         img {
             object-fit: contain;
             object-position: center;
-            user-drag: none;
+            // user-drag: none;
             user-select: none;
             -moz-user-select: none;
             -webkit-user-drag: none;
