--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -32,6 +32,11 @@
         background-position: center;
         background-size: cover;
         margin-bottom: 2rem;
+        user-select: none;
+        -moz-user-select: none;
+        -webkit-user-drag: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
     }
 
     .title {
@@ -46,6 +51,7 @@
 
         img {
             height: 6rem;
+
         }
 
         .title {
