--- a/src/pages/single-product/single-product.styles.scss
+++ b/src/pages/single-product/single-product.styles.scss
@@ -50,6 +50,11 @@
                     img {
                         object-fit: contain;
                         object-position: center;
+                        user-select: none;
+                        -moz-user-select: none;
+                        -webkit-user-drag: none;
+                        -webkit-user-select: none;
+                        -ms-user-select: none;
                     }
                 }
 
